--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "name": "philly-ete",
-  "version": "0.0.0",
-  "description": "",
-  "main": "Gruntfile.js",
-  "directories": {
-    "example": "examples"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "philly-ete-talk",
+  "version": "0.1.0",
   "devDependencies": {
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt": "^0.4.4",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-stylus": "^0.14.0",
-    "grunt": "^0.4.4"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.9.1",
+    "jade": "^1.3.1"
   }
 }
